# strata-fdtd

./: .gitignore  AGENT_ONBOARDING.md  AGENT_PROMPT.md  CHANGELOG.md  LICENSE  README.md  migrate.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: deploy-pages.yml  desktop-release.yml  label-external-issues.yml  version-bump.yml  web-deploy.yml
.loom/: config.json
.loom/roles/: guide.md
.loom/scripts/: read-debug-logs.sh
benchmarks/: benchmark_ade.py  benchmark_gpu_pml.py  benchmark_hdf5.py  profile_fdtd.py
docs/: api-reference.md  builder-guide.md  ci-cd.md  cli-reference.md  getting-started.md  r2-demo-storage.md  strata.md  troubleshooting.md  viewer-guide.md
examples/: README.md  basic_pulse.py  frequency_sweep.py  material_sphere.py  multiple_probes.py  nonuniform_grid.py  organ_pipes.py  pzt_transducer.py  sealed_subwoofer.py  waveguide.py
examples/sdf_csg/: README.md  helmholtz_resonator.py  metamaterial_unit_cell.py  ported_enclosure.py
scripts/: generate_sample_hdf5.py  setup-cloudflare.sh
src/strata_fdtd/: __init__.py
src/strata_fdtd/_kernels/: CMakeLists.txt  kernels.cpp
src/strata_fdtd/_kernels/include/: ade.hpp  boundaries.hpp  fdtd_step.hpp  fdtd_types.hpp  microphones.hpp  pml.hpp
src/strata_fdtd/_kernels/src/: ade.cpp  boundaries.cpp  fdtd_step.cpp  microphones.cpp  pml.cpp
src/strata_fdtd/analysis/: __init__.py  weighting.py
src/strata_fdtd/boundaries/: __init__.py  _boundaries.py
src/strata_fdtd/cli/: README.md  __init__.py  compute.py  executor.py  progress.py
src/strata_fdtd/core/: __init__.py  grid.py  solver.py  solver_gpu.py  waveforms.py
src/strata_fdtd/dsp/: __init__.py  crossover.py  delay.py  eq.py
src/strata_fdtd/geometry/: __init__.py  loudspeaker.py  material_assignment.py  parametric.py  paths.py  primitives.py  resonator.py  sdf.py
src/strata_fdtd/io/: __init__.py  hdf5.py  legacy.py  output.py
src/strata_fdtd/manufacturing/: __init__.py  constraints.py  conversion.py  export.py  lamination.py
src/strata_fdtd/materials/: __init__.py  base.py  library.py  porous.py  resonators.py  solids.py
strata-app/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
strata-app/public/: demos
strata-app/public/assets/: dataWorker-BYzrAhPz.js.map  downsample.worker-D_BwNp-0.js.map  fft.worker-DxnGi49G.js  fft.worker-DxnGi49G.js.map
strata-app/src/: App.tsx  index.css  main.tsx
strata-app/src-tauri/: Cargo.toml  UPDATER.md  tauri.conf.json
strata-app/src-tauri/capabilities/: default.json
strata-app/src-tauri/icons/: .gitkeep  README.md
strata-app/src-tauri/src/: lib.rs  main.rs
strata-app/src/components/: DragDropOverlay.tsx  ErrorBoundary.tsx  FilePickerModal.tsx  ScriptEditor.tsx  UpdateNotification.tsx
strata-app/src/hooks/: useDataWorker.ts  useHDF5Simulation.ts  useProbeData.ts  useSimulation.ts  useTauri.ts  useUrlState.ts
strata-app/src/pages/: OrganPipeDemo.tsx  SimulationBuilder.tsx  ViewerPage.tsx
strata-app/src/stores/: builderStore.ts  index.ts
strata-ui/: package.json  tsconfig.json  vite.config.ts
strata-ui/src/: index.ts
strata-ui/src/components/: BackgroundLoadingIndicator.tsx  ExamplesGallery.tsx  ExportPanel.tsx  FileUpload.tsx  FlowParticleRenderer.tsx  Layout.tsx  OptimizedVoxelRenderer.tsx  PerformanceMetrics.tsx  PlaybackControls.tsx  ScriptEditor.tsx  Spectrogram.tsx  SpectrumPlot.tsx  ThreeViewer.tsx  TimeSeriesPlot.tsx  VideoExportButton.tsx  VisualizationModePanel.tsx  VoxelRenderer.tsx  WaterfallPlot.tsx
strata-ui/src/hooks/: useDataWorker.ts  useExport.ts  useHDF5Simulation.ts  useSimulation.ts  useSliceKeyboardNavigation.ts
strata-ui/src/lib/: acoustics.ts  colormap.ts  demoGeometry.ts  downsample.test.ts  downsample.ts  estimations.ts  export.ts  fft.ts  performance.ts  pythonValidator.ts  scriptParser.ts  skulpt.d.ts  sliceUtils.ts  templates.ts
strata-ui/src/stores/: builderStore.ts  index.ts  simulationStore.ts
strata-ui/src/workers/: acoustics.worker.ts  dataWorker.ts  fft.worker.ts
strata-web/: .env.example  index.html  package.json  vite.config.ts  wrangler.toml
strata-web/public/: _headers  _redirects
strata-web/public/assets/: dataWorker-BYzrAhPz.js  downsample.worker-D_BwNp-0.js
strata-web/public/examples/: README.md  acoustic-lens.py  basic-pulse.py  interference.py  pzt-transducer.py  resonant-cavity.py  template.py
strata-web/public/samples/: simple-pulse.h5
strata-web/scripts/: capture-organ-pipe-videos.mjs  setup-r2.sh  upload-demos-to-r2.sh
strata-web/src/: App.tsx  index.css
strata-web/src/benchmark/: BenchmarkRunner.tsx
strata-web/src/config/: demos.ts  learning-paths.ts
strata-web/src/hooks/: useExport.ts  useHDF5Simulation.ts  useLearningPath.ts  useStreamingBuffer.ts
strata-web/src/pages/: ExamplesGallery.tsx  OrganPipeDemo.tsx  SimulationBuilder.tsx  ViewerPage.tsx
strata-web/src/workers/: dataWorker.ts  fft.worker.ts
tests/: __init__.py  conftest.py  test_circular_membrane.py  test_cli_executor.py  test_constraints.py  test_dsp.py  test_fdtd.py  test_fdtd_benchmarks.py  test_fdtd_gpu.py  test_fdtd_output.py  test_geometry.py  test_grid.py  test_hdf5_output.py  test_loudspeaker.py  test_material_geometry.py  test_materials.py  test_membrane_source.py  test_microphone.py  test_microphone_directional.py  test_microphone_native.py  test_native_extension.py  test_parametric.py  test_paths.py  test_primitives.py  test_rectangular_membrane.py  test_resonator.py  test_sdf.py  test_sdf_conversion.py  test_sdf_csg.py  test_sdf_performance.py  test_transformations.py  test_waveforms.py  test_weighting.py
viz/: .gitignore  DESKTOP-APP.md  README.md  benchmark.html  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.test.json  vite.config.ts
viz/public/examples/: doppler-effect.py  index.json  nonuniform-grid.py  phased-array.py
viz/scripts/: benchmark.ts
viz/src/: App.tsx
viz/src-tauri/: tauri.conf.json
viz/src-tauri/src/: lib.rs
viz/src/benchmark/: BenchmarkRunner.tsx  main.tsx
viz/src/components/: BackgroundLoadingIndicator.tsx  ExportPanel.tsx  (+12 more)
(+142 files in other folders)
